--- a/gui.ui
+++ b/gui.ui
@@ -14,7 +14,7 @@
    <string>CurrencyConverterekralik</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -32,7 +32,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
+      <widget class="QDoubleSpinBox" name="summ"/>
      </item>
      <item row="0" column="4">
       <widget class="QLabel" name="label_2">
@@ -42,14 +42,14 @@
       </widget>
      </item>
      <item row="0" column="6">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="send">
        <property name="text">
         <string>umrechnen</string>
        </property>
       </widget>
      </item>
      <item row="0" column="5">
-      <widget class="QLineEdit" name="lineEdit_2"/>
+      <widget class="QLineEdit" name="goal"/>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="label">
@@ -59,14 +59,14 @@
       </widget>
      </item>
      <item row="0" column="3">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="start"/>
      </item>
      <item row="1" column="0" colspan="7">
       <widget class="QTextBrowser" name="textBrowser"/>
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -77,14 +77,14 @@
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="close_button">
        <property name="text">
         <string>Schließen</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="reset">
        <property name="text">
         <string>zurücksetzen</string>
        </property>
@@ -106,5 +106,22 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>close_button</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>163</x>
+     <y>320</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
